--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,12 @@
 <head>
 	<title>StudentStocks</title>
 	<link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700" rel="stylesheet">
+	<link rel="stylesheet" href="./css/foundation.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
 <body>
 	<div id="app-container">
-
+	
 
 	</div>
 	<script type="text/javascript" src="./js/app.js"></script>
